Correction of measurements

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<header class="bg-white px-5 py-2 mt-3">
-  <div class="flex justify-between items-center">
-    <img src="/img/dc-logo.png" alt="logoDC" class="h-10">
+<header class="px-20 py-2 mt-3 bg-white">
+  <div class="flex items-center justify-between">
+    <img src="/img/dc-logo.png" alt="logoDC" class="h-12">
 
     <nav>
       <ul class="flex list-none">
