--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<section class="flex bg-center bg-cover contact-list" style="background-image: url('/img/footer-bg.jpg')">
+<section class="flex px-20 bg-center bg-cover contact-list" style="background-image: url('/img/footer-bg.jpg')">
   <div class="p-5 text-white comics">
     <ul>
       <h3 class="text-lg font-semibold">DC COMICS</h3>
@@ -24,7 +24,7 @@
 
 </section>
 
-<section class="flex justify-between p-5 bg-gray-800 nav-socials">
+<section class="flex justify-between p-5 px-20 bg-gray-800 nav-socials">
   <button class="px-4 py-2 text-white bg-transparent border border-blue-500">Sign-Up Now</button>
   <nav class="flex items-center">
     <h3 class="mr-3 text-blue-500">Follow Us</h3>
